-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11
-
Component/s: hotspot
-
b10
x86_32:
pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp: In static member function 'static void CodeHeapState::print_usedSpace(outputStream*, CodeHeap*)':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1242:45: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
ast->print("(%4ldK)", total_size/K);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1260:71: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
ast->print("(%4ldK)", (TopSizeArray[i].len<<log2_seg_size)/K);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1315:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1315:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1320:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1320:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1354:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1354:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1359:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1359:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp: In static member function 'static void CodeHeapState::print_names(outputStream*, CodeHeap*)':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:2119:45: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
ast->print("(%4ldK)", total_size/K);
^
pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp: In static member function 'static void CodeHeapState::print_usedSpace(outputStream*, CodeHeap*)':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1242:45: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
ast->print("(%4ldK)", total_size/K);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1260:71: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
ast->print("(%4ldK)", (TopSizeArray[i].len<<log2_seg_size)/K);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1315:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1315:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1320:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1320:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1354:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1354:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1359:21: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
);
^
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:1359:21: error: format '%ld' expects argument of type 'long int', but argument 4 has type 'unsigned int' [-Werror=format=]
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp: In static member function 'static void CodeHeapState::print_names(outputStream*, CodeHeap*)':
/pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/share/code/codeHeapState.cpp:2119:45: error: format '%ld' expects argument of type 'long int', but argument 3 has type 'unsigned int' [-Werror=format=]
ast->print("(%4ldK)", total_size/K);
^
- relates to
-
JDK-8198691 CodeHeap State Analytics
-
- Resolved
-