8200297: Build failures after JDK-8198691 (CodeHeap State Analytics)

Reviewed-by: shade, kvn